tests/outputs/counterexample_compile.out
:generateGrammarSource UP-TO-DATE
:compileJava UP-TO-DATE
:processResources NO-SOURCE
:classes UP-TO-DATE
:ljwrappers:compileJava UP-TO-DATE
:ljwrappers:processResources NO-SOURCE
:ljwrappers:classes UP-TO-DATE
:copyWrappers UP-TO-DATE
:rungenerated/Main.java:18: error: cannot find symbol
        foo(x);
        ^
  symbol:   method foo(A)
  location: class Main
generated/Main.java:19: error: cannot find symbol
        foo(y);
        ^
  symbol:   method foo(B)
  location: class Main
2 errors


BUILD SUCCESSFUL

